Styled the About Me Page

--- a/app/public/challenge.html
+++ b/app/public/challenge.html
@@ -10,7 +10,7 @@
 
     <h1>All about Me!</h1>
     <!-- the source of this picture is on my local system-->
-    <img src="C:\Users\Toluwani\Downloads\WEB DEVELOPMENT 101\html\html notes\peach layout.png" width="480" length="720" alt=" brown skinned teenager ">
+    <img src="peach layout.png" width="480" length="720" alt=" donut">
     <h2>how to easily identify me! &#128515</h2>
     <!--ordered and unordered list tag-->
     <ul>
